# snakeway

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Justfile  README.md  build.rs  gen-test-certs.sh  snakeway.key  snakeway.pem  spoof-traffic.js
integration-tests/: Cargo.toml  build.rs
integration-tests/fixtures/: basic.toml  identity.toml  identity_no_geo.toml  identity_trusted_proxy.toml  static.toml  static_nondefault.toml
integration-tests/fixtures/config/basic/: snakeway.toml
integration-tests/fixtures/config/identity/: snakeway.toml
integration-tests/fixtures/config/identity_no_geo/: snakeway.hcl
integration-tests/fixtures/config/minimal_grpc/: snakeway.hcl  snakeway.toml
integration-tests/fixtures/config/static/: snakeway.toml
integration-tests/fixtures/config/tls/: snakeway.toml
integration-tests/fixtures/public/: index.html
integration-tests/src/: basic_proxy.rs  lib.rs
integration-tests/src/harness/: config.rs  mod.rs  server.rs  tracing.rs  upstream.rs
integration-tests/tests/: basic_proxy.rs  common.rs  grpc.rs  identity.rs  request_filter.rs  static_files.rs  websocket.rs
snakeway/: Cargo.toml
snakeway-core/: Cargo.toml
snakeway-core/config-templates/: snakeway.toml
snakeway-core/config-templates/dev/: snakeway.hcl
snakeway-core/config-templates/dev/devices.d/: wasm_example.hcl
snakeway-core/config-templates/dev/ingress.d/: admin.hcl  api.hcl
snakeway-core/config-templates/devices/: identity.toml  structured_logging.toml
snakeway-core/config-templates/devices.d/: identity.hcl  identity.toml  network_policy.hcl  request_filter.hcl  structured_logging.toml  wasm_example.hcl  wasm_example.toml
snakeway-core/config-templates/ingress.d/: admin.hcl  api.hcl  api.toml  assets.toml
snakeway-core/config-templates/routes/: api.toml  assets.toml  ws.toml
snakeway-core/config-templates/routes.d/: api.toml  assets.toml  ws.toml
snakeway-core/config-templates/routes_service/: ws.toml
snakeway-core/config-templates/routes_static/: assets.toml
snakeway-core/config-templates/services/: api.toml
snakeway-core/config-templates/services.d/: api.toml
snakeway-core/src/: config.rs  lib.rs  logging.rs  proxy.rs  server.rs
snakeway-core/src/cli/: config.rs  logs.rs  mod.rs  plugin.rs  reload.rs
snakeway-core/src/cli/conf/: check.rs  dump.rs  init.rs  mod.rs
snakeway-core/src/cli/config/: check.rs  init.rs
snakeway-core/src/cli/logs/: constants.rs  histogram.rs  mod.rs  parse.rs  pretty.rs  render.rs  run.rs  stats_aggregation.rs  stats_rendering.rs  types.rs
snakeway-core/src/conf/: discover.rs  error.rs  loader.rs  lower.rs  merge.rs  mod.rs  normalize.rs  parse.rs  resolution.rs  runtime.rs  validate.rs
snakeway-core/src/conf/tests/: discover_tests.rs  mod.rs
snakeway-core/src/conf/types/: device.rs  entrypoint.rs  expose.rs  listener.rs  mod.rs  route.rs  server.rs  service.rs
snakeway-core/src/conf/validation/: constraints.rs  error.rs  mod.rs  report.rs  runtime_validation.rs  validate.rs  validated_config.rs  validation.rs  validation_ctx.rs  validators.rs  warning.rs
snakeway-core/src/config/: device.rs  mod.rs  route.rs  server.rs  static_files.rs
snakeway-core/src/config/device/: identity.rs  mod.rs
snakeway-core/src/connection/: guard.rs  manager.rs  mod.rs
snakeway-core/src/connection_management/: guard.rs  manager.rs  mod.rs  state.rs
snakeway-core/src/ctx/: mod.rs  request_ctx.rs  response_ctx.rs  types.rs  ws_close_ctx.rs  ws_ctx.rs
snakeway-core/src/ctx/request/: error.rs  mod.rs  normalization.rs  normalized_request.rs  request_ctx.rs
snakeway-core/src/device/: mod.rs
snakeway-core/src/device/builtin/: identity.rs  mod.rs  request_filter.rs  structured_logging.rs
snakeway-core/src/device/core/: mod.rs  pipeline.rs  registry.rs  result.rs
snakeway-core/src/device/wasm/: bindings.rs  mod.rs  wasm_device.rs
snakeway-core/src/enrichment/: mod.rs
snakeway-core/src/enrichment/geoip/: mod.rs
snakeway-core/src/enrichment/user_agent/: mod.rs  regexes.yaml  uaparser_engine.rs  woothee_engine.rs
snakeway-core/src/l4/: connection_filter.rs
snakeway-core/src/net/: connection_filter.rs  mod.rs
snakeway-core/src/proxy/: admin.rs  admin_gateway.rs  error_classification.rs  gateway.rs  gateway_ctx.rs  mod.rs  public_gateway.rs  redirect_gateway.rs  request_classification.rs
snakeway-core/src/proxy/handlers/: admin.rs  mod.rs  static_file.rs
snakeway-core/src/route/: kind.rs  mod.rs  router.rs  types.rs
snakeway-core/src/runtime/: error.rs  mod.rs  state.rs  types.rs
snakeway-core/src/server/: mod.rs  pid.rs  proxy.rs  reload.rs  runtime.rs  setup.rs
snakeway-core/src/static_files/: handler.rs  mod.rs  resolve.rs  response.rs  serve.rs
snakeway-core/src/static_files/render/: compression.rs  directory.rs  etag.rs  file.rs  headers.rs  mod.rs  range.rs
snakeway-core/src/static_files/serve/: cache.rs  compression.rs  directory_listing.rs  file.rs  headers.rs  mod.rs
snakeway-core/src/traffic/: admin.rs  admission_guard.rs  circuit.rs  decision.rs  director.rs  manager.rs  mod.rs  request_guard.rs  snapshot.rs  strategy.rs  types.rs
snakeway-core/src/traffic/algorithms/: failover.rs  hash.rs  least_connections.rs  mod.rs  random.rs  request_pressure.rs  round_robin.rs  sticky_hash.rs
snakeway-core/src/traffic/tests/: admin.rs  circuit.rs  director.rs  mod.rs
snakeway-core/src/traffic_management/: admin.rs  admission_guard.rs  circuit.rs  decision.rs  director.rs  manager.rs  snapshot.rs  strategy.rs
snakeway-core/src/traffic_management/algorithms/: failover.rs  random.rs  request_pressure.rs  round_robin.rs  sticky_hash.rs
snakeway-core/src/traffic_management/tests/: admin.rs  (+2 more)
snakeway-core/src/user_agent/: mod.rs  uaparser_engine.rs  woothee_engine.rs
snakeway-core/src/ws_connection_management/: guard.rs  manager.rs  mod.rs  state.rs
snakeway/src/: config.rs  http_event.rs  logging.rs  main.rs  proxy.rs  server.rs
snakeway/src/cli/: logs.rs  mod.rs  plugin.rs
snakeway/src/ctx/: request_ctx.rs  response_ctx.rs
snakeway/src/device/: mod.rs  structured_logging.rs
(+301 files in other folders)
