[workspace]
members = ["integration-tests", "snakeway", "snakeway-core"]
default-members = ["snakeway"]
exclude = [
    "snakeway-wit",
]
resolver = "2"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3               # Maximize performance
debug = true                # Keep debug symbols for profiling
lto = "thin"                # Link-time optimization
codegen-units = 1           # More aggressive optimization by reducing parallelism
panic = "abort"             # Reduce panic handling code
incremental = false         # Ensure no incremental compilation


[workspace.dependencies]

anyhow = "1.0"
async-trait = "0.1"
arc-swap = "1.7"
brotli = "8"
bytes = "1.11"
clap = "4.5"
config = "0.15"
console-subscriber = "0.5"
ctrlc = "3"
flate2 = "1.0"
http = "1.4"
httpdate = "1.0"
maxminddb = "0.27"
nix = "0.30"
mime_guess = "2.0.5"
percent-encoding = "2"
pingora = "0.6"
pingora-http = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
tokio = "1.48.0"
tracing = "0.1"
tracing-subscriber = "0.3"
uaparser = "0.6"
wasmtime = "39.0"
wasmtime-wasi = "39"
wit-bindgen = "0.49"
rust-embed = "8.9"
woothee = "0.13"
ipnet = "2.11"
thiserror = "2.0"
glob = "0.3"
serde_yaml = "0.9"
once_cell = "1.21.3"
rand = "0.9"
ahash = "0.8"
dashmap = "7.0.0-rc2"
chrono = { version = "0.4", features = ["serde"] }
url = "2"
hcl-rs = "0.19"
owo-colors = "4"
tempfile = "3"
pretty_assertions = "1"
