[package]
name = "integration-tests"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["blocking"] }
snakeway-core = { version = "*", path = "../snakeway-core", features = ["wasm", "static_files"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tempfile = "3.23.0"