[package]
name = "integration-tests"
version = "0.5.4"
edition = "2024"

[dependencies]
arc-swap = { workspace = true }
reqwest = { version = "0.12", features = ["blocking"] }
snakeway-core = { version = "*", path = "../snakeway-core", features = ["wasm", "static_files"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tonic = { version = "0.14.2", features = ["_tls-any"] }
tokio-tungstenite = "0.28.0"
futures-util = "0.3.31"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
prost = "0.14"
tonic-prost = "0.14"
url = "2.5.7"
pretty_assertions = { workspace = true }

[build-dependencies]
tonic-prost-build = "0.14"

