[package]
name = "snakeway-core"
version = "0.1.0"
edition = "2024"

[features]
default = []
wasm = [
    "wasmtime",
    "wasmtime-wasi",
]

static_files = [
    "brotli",
    "bytes",
    "flate2",
    "httpdate",
    "mime_guess",
    "tokio",
    "percent-encoding"
]

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
brotli = { workspace = true, optional = true }
bytes = { workspace = true, optional = true }
clap = { workspace = true, features = ["derive"] }
flate2 = { workspace = true, optional = true }
http = { workspace = true }
httpdate = { workspace = true, optional = true }
maxminddb = { workspace = true, features = ["mmap"] }
mime_guess = { workspace = true, optional = true }
percent-encoding = { workspace = true, optional = true }
pingora = { workspace = true, features = ["proxy"] }
pingora-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true, optional = true, features = ["fs"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt", "json", "env-filter"] }
uaparser = { workspace = true }
wasmtime = { workspace = true, optional = true }
wasmtime-wasi = { workspace = true, optional = true, features = ["default"] }
woothee = "0.13.0"
