[package]
name = "snakeway-core"
version = "0.2.1"
edition = "2024"

[features]
default = []
wasm = [
    "wasmtime",
    "wasmtime-wasi",
]

static_files = [
    "brotli",
    "bytes",
    "flate2",
    "httpdate",
    "mime_guess",
    "tokio/fs",
    "percent-encoding"
]

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
arc-swap = { workspace = true }
brotli = { workspace = true, optional = true }
bytes = { workspace = true, optional = true }
clap = { workspace = true, features = ["derive"] }
console-subscriber = { workspace = true }
ctrlc = { workspace = true }
flate2 = { workspace = true, optional = true }
http = { workspace = true }
httpdate = { workspace = true, optional = true }
maxminddb = { workspace = true, features = ["mmap"] }
mime_guess = { workspace = true, optional = true }
nix = { workspace = true, features = ["signal"] }
percent-encoding = { workspace = true, optional = true }
pingora = { workspace = true, features = ["proxy"] }
pingora-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true, features = [
    "fs",
    "rt",
    "sync",
    "signal",
    "macros",
    "tracing"
] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt", "json", "env-filter"] }
uaparser = { workspace = true }
wasmtime = { workspace = true, optional = true }
wasmtime-wasi = { workspace = true, optional = true, features = ["default"] }
woothee = "0.13.0"
ipnet = "2.11.0"
thiserror = "2.0.17"
glob = "0.3.3"
