[package]
name = "snakeway-core"
version = "0.5.3"
edition = "2024"

[features]
default = []
wasm = [
    "wasmtime",
    "wasmtime-wasi",
]

static_files = [
    "brotli",
    "bytes",
    "flate2",
    "httpdate",
    "mime_guess",
    "tokio/fs",
    "percent-encoding"
]

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
arc-swap = { workspace = true }
brotli = { workspace = true, optional = true }
bytes = { workspace = true, optional = true }
clap = { workspace = true, features = ["derive"] }
console-subscriber = { workspace = true }
ctrlc = { workspace = true }
flate2 = { workspace = true, optional = true }
http = { workspace = true }
httpdate = { workspace = true, optional = true }
maxminddb = { workspace = true, features = ["mmap"] }
mime_guess = { workspace = true, optional = true }
nix = { workspace = true, features = ["signal"] }
percent-encoding = { workspace = true, optional = true }
pingora = { workspace = true, features = ["proxy", "rustls"] }
pingora-http = { workspace = true }
rust-embed = { workspace = true }
serde = { workspace = true, features = ["rc"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = [
    "fs",
    "rt",
    "sync",
    "signal",
    "macros",
    "tracing"
] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt", "json", "env-filter"] }
tracing-appender = { workspace = true }
uaparser = { workspace = true }
wasmtime = { workspace = true, optional = true }
wasmtime-wasi = { workspace = true, optional = true, features = ["default"] }
woothee = { workspace = true }
ipnet = { workspace = true }
thiserror = { workspace = true }
glob = { workspace = true }
serde_yaml = { workspace = true }
once_cell = { workspace = true }
rand = { workspace = true }
ahash = { workspace = true }
dashmap = { workspace = true }
chrono = { workspace = true }
hcl-rs = { workspace = true }
owo-colors = { workspace = true }
tempfile = { workspace = true }
pretty_assertions = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
