[package]
name = "snakeway"
version = "0.1.0"
edition = "2024"

[dependencies]
snakeway-core = { version = "*", path = "../snakeway-core" }
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
http = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[[bin]]
name = "snakeway"
path = "src/main.rs"
