[package]
name = "snakeway"
version = "0.5.2"
edition = "2024"

[features]
default = []
wasm = ["snakeway-core/wasm"]
static_files = ["snakeway-core/static_files"]

[dependencies]
snakeway-core = { version = "*", path = "../snakeway-core" }
clap = { workspace = true, features = ["derive"] }

[[bin]]
name = "snakeway"
path = "src/main.rs"
